--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   const combinations = [
     {
       combination: ["Дионель", "Талена", "Скарлита"],
-      counter: ["Нацу", "Joker", "Харак"]
+      counter: ["Нацу", "Харак"]
     },
     {
       combination: ["Бериал", "Талена", "Торан"],
